--- a/Signer/MainWindow.xaml
+++ b/Signer/MainWindow.xaml
@@ -1,12 +1,26 @@
 ﻿<Window x:Class="Signer.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Signer"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:local="clr-namespace:Signer"
+		mc:Ignorable="d"
+		Title="MainWindow" Height="350" Width="525"
+		Loaded="MainWindow_OnLoaded"
+		>
+	<Grid x:Name="MainGrid">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+		<TextBox 
+			Grid.Column="0" 
+			Grid.Row="0" 
+			Text="{Binding Path=StartupUri}" 
+			MinHeight="20"
+			MaxHeight="30"
+			MinWidth="100"/>
+	</Grid>
 </Window>
