Last selected certificate now also saved to config

--- a/Signer/MainWindow.xaml
+++ b/Signer/MainWindow.xaml
@@ -110,7 +110,7 @@
 				</StackPanel>
 			</GroupBox>
 			<Label Content="Сертификат" Padding="0" Margin="5,0,5,2"/>
-			<ComboBox Margin="5,0,5,5" ItemsSource="{Binding Certificates}" x:Name="SelectedSignatureCert">
+			<ComboBox Margin="5,0,5,5" ItemsSource="{Binding Certificates}" x:Name="SelectedSignatureCert" SelectedIndex="{Binding CertificateItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 				<ComboBox.ItemTemplate>
 					<DataTemplate>
 						<TextBlock>
