Project renamed to UniSign

--- a/UniSign/MainWindow.xaml
+++ b/UniSign/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Signer.MainWindow"
+﻿<Window x:Class="UniSign.MainWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:local="clr-namespace:Signer"
-	xmlns:core="clr-namespace:Signer.CoreModules"
+	xmlns:local="clr-namespace:UniSign"
+	xmlns:core="clr-namespace:UniSign.CoreModules"
 	xmlns:x509Certificates="clr-namespace:System.Security.Cryptography.X509Certificates;assembly=System"
 	mc:Ignorable="d"
 	Title="UniSign" 
