--- a/UniSign/App.xaml
+++ b/UniSign/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Signer.App"
+﻿<Application x:Class="UniSign.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Signer"
+             xmlns:local="clr-namespace:UniSign"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
