+ additional try-catch block on signature check - for adequate error message + border for raw-xml view of the message to be signed

--- a/UniSign/MainWindow.xaml
+++ b/UniSign/MainWindow.xaml
@@ -89,6 +89,9 @@
 						BorderThickness="1"
 						BorderBrush="Black" 
 				>
+					<Border.Effect>
+						<DropShadowEffect ShadowDepth="1"/>
+					</Border.Effect>
 					<TextBlock Text="{Binding Path=OriginalXmlDataToSign}" Margin="5" />
 				</Border>
 			</TabItem>
