--- a/UniSign/MainWindow.xaml
+++ b/UniSign/MainWindow.xaml
@@ -103,7 +103,9 @@
 					BorderBrush="Black" 
 					Padding="0"
 				>
-					<TextBlock Text="{Binding Path=OriginalXmlDataToSign}" Margin="1" Background="White" Padding="0"/>
+					<ScrollViewer>
+						<TextBlock Text="{Binding Path=OriginalXmlDataToSign}" Margin="1" Background="White" Padding="0"/>
+					</ScrollViewer>
 				</Border>
 			</TabItem>
 		</TabControl>
