--- a/UniSign/MainWindow.xaml
+++ b/UniSign/MainWindow.xaml
@@ -138,7 +138,7 @@
 			<ComboBox Margin="5,0,5,5" ItemsSource="{Binding Certificates}" x:Name="SelectedSignatureCert" SelectedIndex="{Binding CertificateItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 				<ComboBox.ItemTemplate>
 					<DataTemplate>
-						<TextBlock>
+						<TextBlock Margin="10,10,0,10">
 							<Run 
 								Text="{
 									Binding Path=., 
@@ -147,8 +147,7 @@
 									TargetNullValue=Выберите сертификат, 
 									StringFormat={}&#10002; {0}
 								}"
-							/> 
-
+							/>
 						</TextBlock>
 					</DataTemplate>
 
