beta branch init (/beta/1-1) & beta config for installer

--- a/UniSign/MainWindow.xaml
+++ b/UniSign/MainWindow.xaml
@@ -7,7 +7,7 @@
 	xmlns:core="clr-namespace:UniSign.CoreModules"
 	xmlns:x509Certificates="clr-namespace:System.Security.Cryptography.X509Certificates;assembly=System"
 	mc:Ignorable="d"
-	Title="UniSign" 
+	Title="UniSign (beta)" 
 	Loaded="MainWindow_OnLoaded"
 	Closing="MainWindow_OnClosing"
 	FontSize="16" 
